# otters

./: CHANGELOG.md  Cargo.toml  DESIGN_DOC.md  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
examples/: demo.rs
src/: col.rs  display.rs  expr.rs  lib.rs  main.rs  meta.rs  meta_compute.rs  prelude.rs  type_utils.rs  types.rs  vec.rs  vec_compute.rs  vec_old.rs
tests/: column_tests.rs  expr_tests.rs  meta_tests.rs  meta_zonemap_tests.rs  simd_types_tests.rs  vec_store_tests.rs  vector_tests.rs
