[package]
name = "otters"
version = "0.1.0"
edition = "2024"
description = "High-performance vector search with metadata filtering"
license = "MIT"
repository = "https://github.com/atharvbhat/otters"
readme = "README.md"

[dependencies]
bitvec = "1.0.1"
chrono = "0.4.41"
fastbloom = "0.14.0"
itertools = "0.12.1"
rand = "0.9.1"
rayon = "1.11.0"
wide = "0.7.33"


[profile.perf]
inherits = "release"
opt-level = 3
debug = true
lto = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
